Fix align at research projects

--- a/css/base.css
+++ b/css/base.css
@@ -70,7 +70,7 @@ ul,p{
 }
 
 
-.page-section-title{
+.page-section .page-section-title{
     font-size: 2rem;
     font-weight: bold;
 }
@@ -107,17 +107,18 @@ ul,p{
     top: -5px;
 }
 
-.page-section-content{
+.page-section .page-section-content {
     width: 100%;
     height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top:2%;
-    margin-bottom:2%;
+    margin-top: 2%;
+    margin-bottom: 2%;
 
 }
+
 .page-section-content p,
 .page-section-content p span,
 .page-section-content p a{
