--- a/css/cv.css
+++ b/css/cv.css
@@ -1,10 +1,10 @@
 .job {
     width: 90%;
+    padding: 1rem;
     position: relative;
     display: flex;
     flex-direction: column;
     margin-bottom: 1em;
-    padding-bottom: 1em;
     border-bottom: 1px solid #ccc;
 }
 
